Fixed faulty menu and broken hover effects on mobile devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -569,7 +569,6 @@
 	#menu {
 
 		top: 0;
-		cursor: default;
 		left: 0;
 		position: absolute;
 		text-align: center;
@@ -750,7 +749,10 @@
 }
 
 @media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {
+  	position: relative;
+  	background-color: rgba(0,0,0,0.6);
+  }
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
@@ -759,7 +761,7 @@
   .topnav.responsive a {
     float: none;
     display: block;
-    text-align: left;
+    text-align: center;
   }
 
 }
