--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -2167,6 +2167,12 @@
 					margin: 0 0 2em 0;
 				}
 
+				.image.blog img {
+
+					width: 100%;
+
+				}
+
 			}
 
 /* Table */
@@ -2425,7 +2431,7 @@
 					height: 100%;
 					opacity: 1.0;
 					z-index: 1;
-					opacity: 0.0;
+					opacity: 0;
 				}
 
 				.tiles article > .image:after {
@@ -2549,7 +2555,7 @@
 			}
 
 				body:not(.is-touch) .tiles article:hover > .image:before {
-					background-color: #333333;
+					background-color: black;
 					opacity: 0.5;
 				}
 
@@ -2623,6 +2629,14 @@
 						transform: scale(1.0);
 					}
 
+					.tiles article > .image:before {
+						opacity: 0.5;
+					}
+
+					body:not(.is-touch) .tiles article:hover > .image:before {
+						opacity: 0.8;
+					}
+
 		}
 
 		@media screen and (max-width: 480px) {
@@ -2635,6 +2649,14 @@
 					width: 100%;
 					margin: 1.25em 0 0 0;
 				}
+
+				.tiles article > .image:before {
+						opacity: 0.5;
+					}
+
+					body:not(.is-touch) .tiles article:hover > .image:before {
+						opacity: 0.8;
+					}
 
 		}
 
@@ -2793,7 +2815,7 @@
   .topnav.responsive a {
     float: none;
     display: block;
-    text-align: left;
+    text-align: center;
   }
 
 }
